# harp-examples

./: .gitignore  Makefile
.check/: pyproject.toml
.check/check/: __main__.py
aggregator/: Makefile  README.rst  config.yml  pyproject.toml
aggregator/aggregator/: __app__.py  controller.py  services.yml  settings.py
basic-cache/: Makefile  README.rst  config.yml  pyproject.toml
basics/: Makefile  README.rst  pyproject.toml
basics/tests/: conftest.py  test_e2e.py
circuit-breaker/: Makefile  README.rst  config.yml  pyproject.toml
datetime-formatter/: README.rst  config.yml  pyproject.toml  rule.py
first-app/: Makefile  pyproject.toml
first-app/first_app/: __app__.py
first-config/: README.rst  pyproject.toml
mock-api/: Makefile  README.rst  config.yml  pyproject.toml  rule.py
mock-api/frontend/: index.html  package-lock.json  package.json  vite.config.ts
mock-api/frontend/src/: App.tsx  ProducCatalog.tsx
mock-api/frontend/src/api/: getProducts.ts
rss-api/: Makefile  README.rst  pyproject.toml
rss-api/config/: common.yml  custom_app.yml  rules.yml
rss-api/rss_api/: controllers.py
soap-to-rest/: Makefile  README.rst  config.yml  pyproject.toml
soap-to-rest/rules/: on_request.py  on_response.py
