[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Arthur Degonde <arthur@makersquad.fr>"]
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
harp-proxy = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
